--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,16 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Está na hora de criar alguns testes.\"",
+    "dev": "ts-node-dev src/server.ts",
+    "knex:migrate": "npx knex migrate:latest --knexfile knexfile.ts migrate:latest"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Matheus",
+  "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.6",
     "express": "^4.17.1",
